Changes on 08/03/23 User on Safari browser is reporting that grid squares can be clicked up to 8 times before appearance of Welcome modal. Attempted to solve issue by adding disableGridClick function to "body onload", and a new function that prevents turns from being decremented. Added timers of 0 ms to each body onload function, as resources online suggested this could be a viable fix. Moved activate mines switch above the difficulty buttons, as players report that they forget to activate mines before starting game.

--- a/style.css
+++ b/style.css
@@ -682,21 +682,20 @@ h5 {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
     align-items: center;
     margin: auto;
     margin-top: 1rem;
-    width: 16rem;
+    width: 11rem;
     text-transform: uppercase;
-    font-size: 1.6rem;
+    font-size: 1rem;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;    
+
 }
 
 /*The Mines Switch*/
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
-    margin-left: 0.75rem;
+    width: 45px;
+    height: 26px;
+    margin-left: 0.5rem;
 }
 
 .switch input {
@@ -715,14 +714,14 @@ h5 {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
     background-color: #dfc09b;
     -webkit-transition: .4s;
     transition: .4s;
-    border-radius: 6px;
+    border-radius: 4px;
 }
 
 .slider.round:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
+    height: 19px;
+    width: 19px;
     left: 4px;
     bottom: 4px;
     background-color: #383838;
@@ -738,9 +737,9 @@ input:checked + .slider {
 
 
 input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    transform: translateX(20px);
 }
   
 #winGameModalContent {
